--- a/src/main/webapp/member.html
+++ b/src/main/webapp/member.html
@@ -60,12 +60,12 @@
 			<a href="one.html">
 					<button>GO</button>
 			</a>
-		</td>
+		</td>0.
 	</tr>
 	<tr>
 		<td>회원검색(여러명)</td>
 		<td>
-			<a href="list.html">
+			<a href="list.jsp">
 					<button>GO</button>
 			</a>
 		</td>
