--- a/src/main/webapp/update.html
+++ b/src/main/webapp/update.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <style>
+	body{
+		background: lime;
+	}
 	*{
 		font-size: 20px;
 		text-align: center;
@@ -22,40 +25,30 @@
 	input{
 		background: greenyellow;
 	}
-	textarea{
-		background: greenyellow;
-	}
 </style>
 </head>
 <body>
-		<h3>게시판글쓰기화면입니다.</h3>
+		<h3>회원수정화면입니다.</h3>
 		<hr color="red">
 		<a href="index.html">첫페이지로 이동</a>
-		<a href="bbs.html">게시판정보페이지로 이동</a>
-		<form action="insert2.jsp">
+		<a href="member.html">회원정보페이지로 이동</a>
+		<form action="update.jsp">
 		<table border="1" align="center">
 			<tr>
-				<td class="left">제목: </td>
+				<td>아이디: </td>
 				<td>
-					<input name="title" value="good">
+					<input name="id" value="ice2">
 				</td>
 			</tr>
 			<tr>
-				<td class="left">내용: </td>
+				<td>전화번호: </td>
 				<td>
-					<textarea cols="20" rows="5" name="content">very good</textarea>				</textarea>
+					<input name="tel" value="9999">
 				</td>
 			</tr>
 			<tr>
-				<td class="left">작성자: </td>
-				<td>
-					<input name="writer" value="apple">
-				</td>
-			</tr>
-			<tr>
-				<td colspan="2" id="bottom" >
-					<button type="submit">게시판글쓰기요청</button>
-
+				<td colspan="2">
+					<button type="submit">회원수정요청</button>
 				</td>
 			</tr>
 		</table>
