--- a/src/main/webapp/update2.html
+++ b/src/main/webapp/update2.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <style>
+	body{
+		background: pink;
+	}
 	*{
 		font-size: 20px;
 		text-align: center;
@@ -28,11 +31,11 @@
 </style>
 </head>
 <body>
-		<h3>게시판글쓰기화면입니다.</h3>
+		<h3>게시판수정화면입니다.</h3>
 		<hr color="red">
 		<a href="index.html">첫페이지로 이동</a>
 		<a href="bbs.html">게시판정보페이지로 이동</a>
-		<form action="insert2.jsp">
+		<form action="update2.jsp">
 		<table border="1" align="center">
 			<tr>
 				<td class="left">제목: </td>
@@ -47,14 +50,14 @@
 				</td>
 			</tr>
 			<tr>
-				<td class="left">작성자: </td>
+				<td class="left">번호: </td>
 				<td>
-					<input name="writer" value="apple">
+					<input name="no" value="8">
 				</td>
 			</tr>
 			<tr>
 				<td colspan="2" id="bottom" >
-					<button type="submit">게시판글쓰기요청</button>
+					<button type="submit">게시판수정요청</button>
 
 				</td>
 			</tr>
