--- a/src/main/webapp/bbs.html
+++ b/src/main/webapp/bbs.html
@@ -55,7 +55,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td>게시판검색(한명)</td>
+		<td>게시판검색(한개)</td>
 		<td>
 			<a href="one2.html">
 					<button>GO</button>
@@ -63,9 +63,9 @@
 		</td>
 	</tr>
 	<tr>
-		<td>게시판검색(여러명)</td>
+		<td>게시판검색(여러개)</td>
 		<td>
-			<a href="list2.html">
+			<a href="list2.jsp">
 					<button>GO</button>
 			</a>
 		</td>
