--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,6 +23,7 @@
 <body>
 	<h5>나의 첫 홈페이지</h5>
 	<hr color="red">
+	<img src="img/2.png" width="200" height="200">
 	<table>
 		<tr> <!--가로한줄-->
 			<td>
