--- a/src/main/webapp/insert.html
+++ b/src/main/webapp/insert.html
@@ -32,7 +32,7 @@
 		<hr color="red">
 		<a href="index.html">첫페이지로 이동</a>
 		<a href="member.html">회원정보페이지로 이동</a>
-		<form action="insert.jsp">
+		<form action="insert.jsp" method="post">
 		<table border="1" align="center">
 			<tr>
 				<td>아이디: </td>
