--- a/src/main/webapp/product.html
+++ b/src/main/webapp/product.html
@@ -65,7 +65,7 @@
 	<tr>
 		<td>상품검색(여러개)</td>
 		<td>
-			<a href="list3.html">
+			<a href="list3.jsp">
 					<button>GO</button>
 			</a>
 		</td>
